# wasm-pack-sample

./: Cargo.toml  LICENSE_MIT  README.md  index.html
js/: app.js
src/: lib.rs  utils.rs
tests/: integration_test.rs
