[package]
name = "wasm-pack-sample"
version = "0.1.0"
authors = ["tiwuofficial <theimaginationwasunbroken@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
opt-level = "s"
